@@ -1122,6 +1122,8 @@
 [3, -2]
 [3, -21218]
 [3, -1/4]
+0
+0
 3
 1
 [1431, 5737585]
@@ -1228,4 +1230,4 @@ x + 2
 29
 101
 1
-Total time spent: 3426
+Total time spent: 3174
