@@ -24,6 +24,9 @@ do(-8)
 do(-8 * 103^6)
 do(-1/64)
 
+ispower(2,2^64)
+ispower(1/2,2^64)
+
 for (i=1, #v, if (!ispowerful(v[i]), print(i)))
 ispowerful(5^3*(10^1000+1)^2)
 
